src/mela/io/ParserParameters.jj
options {
  STATIC = false;
}

PARSER_BEGIN(MELAParameters)

package mela.io;

import java.util.ArrayList;

import mela.simulator.ActionCount;
import mela.simulator.DataAction;
import mela.simulator.DataPopulation;
import mela.simulator.Parameters;
import mela.simulator.Population;
import mela.simulator.PopulationLocation;
import mela.simulator.StepsPredicate;
import mela.simulator.StoppingPredicate;
import mela.simulator.TemporalHorizon;

public class MELAParameters {
       
    public MELAParameters() {
        this(new java.io.StringReader(""));
    }

    public void parseFromFile( String filename ) throws ParseException, TokenMgrError, NumberFormatException {
        try { this.ReInit(new java.io.FileReader(filename)); }
        catch(java.io.IOException e) {throw new ParseException("Error while opening file " + filename + ": " + e); }
        this.Input();
    }

}

PARSER_END(MELAParameters)

/***************************************************************
SKIP
***************************************************************/

<DEFAULT,RESET,ID> SKIP :
{
  " "
  | "\t"
  | "\n"
  | "\r"

  | <"//" (~["\n","\r"])* ("\n"|"\r"|"\r\n")>
  | <"/*" (~["*"])* "*" (~["/"] (~["*"])* "*")* "/">
}


/***************************************************************
TOKENS
***************************************************************/

 /* LITERALS */
TOKEN : { < #INTEGER: ("-")? ["0"-"9"] (["0"-"9"])* > }
TOKEN : { < #FLOAT:
                            ("-")?  (["0"-"9"])+ "." (["0"-"9"])*
                            | ("-")?  "." (["0"-"9"])+
                    > }
TOKEN : { < #FLOAT_SCIENTIFIC:
                             ("-")? (["0"-"9"])+ "." (["0"-"9"])* (<EXPONENT>)
                            |  ("-")? "." (["0"-"9"])+ (<EXPONENT>)
                            |  ("-")? (["0"-"9"])+ <EXPONENT>
                    > }
TOKEN : { < #EXPONENT: ["e","E"] (["+","-"])? (["0"-"9"])+ > }
TOKEN: { < #LETTER: ["A"-"Z","a"-"z"] > }
TOKEN: { < #DIGIT: ["0"-"9"] > }

TOKEN: { < #WORD: (["A"-"Z","a"-"z"])+ > }

	
/*
IDENTIFIERS
*/

<DEFAULT> TOKEN : { <KEYWORD_RUN : "#Runs" > }

<DEFAULT> TOKEN : { <KEYWORD_TIME : "#Time" > }
<DEFAULT> TOKEN : { <KEYWORD_POPULATION : "#Population" > }
<DEFAULT> TOKEN : { <KEYWORD_POPLOC : "#Pop_Loc" > }
<DEFAULT> TOKEN : { <KEYWORD_ACTION : "#ActionCount" > }
<DEFAULT> TOKEN : { <KEYWORD_STEP : "#Steps" > }

<DEFAULT> TOKEN : { <KEYWORD_TIMEBOUND : "#Time bound" > }

<DEFAULT> TOKEN : { <KEYWORD_TOTAL : "#Total population" > }
<DEFAULT> TOKEN : { <KEYWORD_COUNT : "#Action" > }

<DEFAULT> TOKEN : { <SEMICOLON : ":" > }
<DEFAULT> TOKEN : { <ASSIGN : "=" >}
<DEFAULT> TOKEN : { <COMMA : "," >}

<DEFAULT> TOKEN : { <LR : "(" > }
<DEFAULT> TOKEN : { <RR : ")" > }

<DEFAULT> TOKEN : {<INT : <INTEGER> > }
<DEFAULT> TOKEN : {<DOUBLE : <FLOAT>|<FLOAT_SCIENTIFIC> > }
<DEFAULT> TOKEN: { <IDENTIFIER: <LETTER>(<LETTER>|<DIGIT>|"_"|"$"|"#")*> }


<MATH> TOKEN : { <MATH_EXPR : (<DIGIT> | <SYMBOL> | <SPACE> | <M_AND> | <M_OR> | <M_LINER> | <M_LINEN>)+ > : DEFAULT }
<MATH> TOKEN : { <#SPACE : " " | "\t"> }
<MATH> TOKEN : { <#M_AND : "&&" > }
<MATH> TOKEN : { <#M_OR : "|"> }
<MATH> TOKEN : { <#M_LINER : "\r"> }
<MATH> TOKEN : { <#M_LINEN : "\n"> }

TOKEN : { <#SYMBOL : [".", "=", "+", "-", "*", "/", "%", "^", "(", ")", "!", "<", ">", ",", "_", "[","]" ]> }
TOKEN : { <#PARAM_SYMBOL : [".", "+", "-", "*", "/", "%", "^" ]> }


/***********************************************
GRAMMAR RULES
***********************************************/

void Input() throws NumberFormatException, RuntimeException, ParseException :
{
Parameters modelParam = new Parameters();
StoppingPredicate stoppingPredicate;
Token population, population2, action, action2, runs;
ArrayList<String > nameAgents = new ArrayList< String >();
ArrayList<String > nameActions = new ArrayList< String >();
}
{   
    <KEYWORD_RUN>
    <ASSIGN>
    runs = <INT>
    {int runsValue = Integer.parseInt(runs.image);
     modelParam.setSimulationRuns(runsValue); }
    stoppingPredicate = StopChoice()
    {modelParam.setStoppingPredicate(stoppingPredicate);}
      
    (
    <KEYWORD_TOTAL>
    <ASSIGN>
    population = <IDENTIFIER>
    {nameAgents.add(population.image); }
    (<COMMA>
    population2 = <IDENTIFIER>
    {nameAgents.add(population2.image); })*
    { DataPopulation dataPop = new DataPopulation();
    dataPop.setNames(nameAgents); }
    )?
    
    (
    <KEYWORD_ACTION>
    <ASSIGN>
    action = <IDENTIFIER>
    {nameActions.add(action.image); }
    (<COMMA>
    action2 = <IDENTIFIER>
    {nameActions.add(action2.image); })*
    { DataAction dataAc = new DataAction();
      dataAc.setNames(nameActions);
      })?
    
    <EOF>
}

StoppingPredicate StopChoice() throws NumberFormatException, RuntimeException, ParseException :
{Token bound=null, timeTotal=null, timeBound, nameAgent, actionName=null, actionCount=null, x=null,y=null,z=null, steps;
String  locationName = "[";}
{   
    [   
        LOOKAHEAD(2)
        bound = < KEYWORD_TIME >
         <SEMICOLON>
        timeTotal = <DOUBLE>
        { TemporalHorizon newTempHor = new TemporalHorizon();
          double timeTotalValue = Double.parseDouble(timeTotal.image);
          newTempHor.setTemporalHorizon(timeTotalValue);
          return newTempHor;
        }
        |
        LOOKAHEAD(2)
        bound = <  KEYWORD_POPULATION >
        <SEMICOLON>
        nameAgent = <IDENTIFIER>
        <KEYWORD_TIMEBOUND>
        <ASSIGN>
        timeBound = <DOUBLE>
        { Population newPop = new Population();
          newPop.setPopulationName(nameAgent.image);
          double timeBoundValue = Double.parseDouble(timeBound.image);
          newPop.setTimeBound(timeBoundValue);
          return newPop;
        }       
        |
        LOOKAHEAD(2)
        bound = <  KEYWORD_POPLOC >
        <SEMICOLON>
        nameAgent = <IDENTIFIER>
        <LR>
	    x = <INT> { locationName += x; }
        (
        <COMMA>
        y = <INT> { locationName += ", "+y; }
        (
        <COMMA>
        z = <INT> { locationName += ", "+z; }
        )?
        )?
        { locationName += "]";}
        <RR>
        <KEYWORD_TIMEBOUND>
        <ASSIGN>
        timeBound = <DOUBLE>
        { PopulationLocation newPopLoc = new PopulationLocation();
          newPopLoc.setPopulationName(nameAgent.image);
          newPopLoc.setLocationName(locationName);
          double timeBoundValue = Double.parseDouble(timeBound.image);
          newPopLoc.setTimeBound(timeBoundValue);
          return newPopLoc;
        }              
        |   
        LOOKAHEAD(2)
        bound = <  KEYWORD_ACTION >
        <SEMICOLON>
        actionName = <IDENTIFIER>
        <ASSIGN>
        actionCount = <INT>
        <KEYWORD_TIMEBOUND>
        <ASSIGN>
        timeBound = <DOUBLE>
        { ActionCount acCount = new ActionCount();
          acCount.setActionName(actionName.image);
          int actionCountValue = Integer.parseInt(actionCount.image);
          acCount.setCount(actionCountValue);
          double timeBoundValue = Double.parseDouble(timeBound.image);
          acCount.setTimeBound(timeBoundValue);
          return acCount;
        } 
        |   
        LOOKAHEAD(2)
        bound = <  KEYWORD_STEP >
        <ASSIGN>
        steps = <INT>
        <KEYWORD_TIMEBOUND>
        <ASSIGN>
        timeBound = <DOUBLE>
        {
          StepsPredicate newStepPred = new StepsPredicate();
          int stepsValue = Integer.parseInt(steps.image);
          newStepPred.setNumberSteps(stepsValue);
          double timeBoundValue = Double.parseDouble(timeBound.image);
          newStepPred.setTimeBound(timeBoundValue);
          return newStepPred;
        }
    ]      
    }
    
   
