src/mela/io/MELAParameters.java
/* Generated By:JavaCC: Do not edit this line. MELAParameters.java */
package mela.io;

import java.util.ArrayList;

import mela.simulator.ActionCount;
import mela.simulator.DataAction;
import mela.simulator.DataPopulation;
import mela.simulator.Parameters;
import mela.simulator.Population;
import mela.simulator.PopulationLocation;
import mela.simulator.StepsPredicate;
import mela.simulator.StoppingPredicate;
import mela.simulator.TemporalHorizon;

public class MELAParameters implements MELAParametersConstants {

    public MELAParameters() {
        this(new java.io.StringReader(""));
    }

    public void parseFromFile( String filename ) throws ParseException, TokenMgrError, NumberFormatException {
        try { this.ReInit(new java.io.FileReader(filename)); }
        catch(java.io.IOException e) {throw new ParseException("Error while opening file " + filename + ": " + e); }
        this.Input();
    }

/***********************************************
GRAMMAR RULES
***********************************************/
  final public void Input() throws ParseException, NumberFormatException, RuntimeException, ParseException {
Parameters modelParam = new Parameters();
StoppingPredicate stoppingPredicate;
Token population, population2, action, action2, runs;
ArrayList<String > nameAgents = new ArrayList< String >();
ArrayList<String > nameActions = new ArrayList< String >();
    jj_consume_token(KEYWORD_RUN);
    jj_consume_token(ASSIGN);
    runs = jj_consume_token(INT);
     int runsValue = Integer.parseInt(runs.image);
     modelParam.setSimulationRuns(runsValue);
    stoppingPredicate = StopChoice();
     modelParam.setStoppingPredicate(stoppingPredicate);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case KEYWORD_TOTAL:
      jj_consume_token(KEYWORD_TOTAL);
      jj_consume_token(ASSIGN);
      population = jj_consume_token(IDENTIFIER);
     nameAgents.add(population.image);
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        jj_consume_token(COMMA);
        population2 = jj_consume_token(IDENTIFIER);
     nameAgents.add(population2.image);
      }
      DataPopulation dataPop = new DataPopulation();
    dataPop.setNames(nameAgents);
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case KEYWORD_ACTION:
      jj_consume_token(KEYWORD_ACTION);
      jj_consume_token(ASSIGN);
      action = jj_consume_token(IDENTIFIER);
     nameActions.add(action.image);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_2;
        }
        jj_consume_token(COMMA);
        action2 = jj_consume_token(IDENTIFIER);
     nameActions.add(action2.image);
      }
      DataAction dataAc = new DataAction();
      dataAc.setNames(nameActions);
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    jj_consume_token(0);
  }

  final public StoppingPredicate StopChoice() throws ParseException, NumberFormatException, RuntimeException, ParseException {
 Token bound=null, timeTotal=null, timeBound, nameAgent, actionName=null, actionCount=null, x=null,y=null,z=null, steps;
String  locationName = "[";
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case KEYWORD_TIME:
    case KEYWORD_POPULATION:
    case KEYWORD_POPLOC:
    case KEYWORD_ACTION:
    case KEYWORD_STEP:
      if (jj_2_1(2)) {
        bound = jj_consume_token(KEYWORD_TIME);
        jj_consume_token(SEMICOLON);
        timeTotal = jj_consume_token(DOUBLE);
          TemporalHorizon newTempHor = new TemporalHorizon();
          double timeTotalValue = Double.parseDouble(timeTotal.image);
          newTempHor.setTemporalHorizon(timeTotalValue);
          {if (true) return newTempHor;}
      } else if (jj_2_2(2)) {
        bound = jj_consume_token(KEYWORD_POPULATION);
        jj_consume_token(SEMICOLON);
        nameAgent = jj_consume_token(IDENTIFIER);
        jj_consume_token(KEYWORD_TIMEBOUND);
        jj_consume_token(ASSIGN);
        timeBound = jj_consume_token(DOUBLE);
          Population newPop = new Population();
          newPop.setPopulationName(nameAgent.image);
          double timeBoundValue = Double.parseDouble(timeBound.image);
          newPop.setTimeBound(timeBoundValue);
          {if (true) return newPop;}
      } else if (jj_2_3(2)) {
        bound = jj_consume_token(KEYWORD_POPLOC);
        jj_consume_token(SEMICOLON);
        nameAgent = jj_consume_token(IDENTIFIER);
        jj_consume_token(LR);
        x = jj_consume_token(INT);
                        locationName += x;
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          jj_consume_token(COMMA);
          y = jj_consume_token(INT);
                    locationName += ", "+y;
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case COMMA:
            jj_consume_token(COMMA);
            z = jj_consume_token(INT);
                    locationName += ", "+z;
            break;
          default:
            jj_la1[4] = jj_gen;
            ;
          }
          break;
        default:
          jj_la1[5] = jj_gen;
          ;
        }
          locationName += "]";
        jj_consume_token(RR);
        jj_consume_token(KEYWORD_TIMEBOUND);
        jj_consume_token(ASSIGN);
        timeBound = jj_consume_token(DOUBLE);
          PopulationLocation newPopLoc = new PopulationLocation();
          newPopLoc.setPopulationName(nameAgent.image);
          newPopLoc.setLocationName(locationName);
          double timeBoundValue = Double.parseDouble(timeBound.image);
          newPopLoc.setTimeBound(timeBoundValue);
          {if (true) return newPopLoc;}
      } else if (jj_2_4(2)) {
        bound = jj_consume_token(KEYWORD_ACTION);
        jj_consume_token(SEMICOLON);
        actionName = jj_consume_token(IDENTIFIER);
        jj_consume_token(ASSIGN);
        actionCount = jj_consume_token(INT);
        jj_consume_token(KEYWORD_TIMEBOUND);
        jj_consume_token(ASSIGN);
        timeBound = jj_consume_token(DOUBLE);
          ActionCount acCount = new ActionCount();
          acCount.setActionName(actionName.image);
          int actionCountValue = Integer.parseInt(actionCount.image);
          acCount.setCount(actionCountValue);
          double timeBoundValue = Double.parseDouble(timeBound.image);
          acCount.setTimeBound(timeBoundValue);
          {if (true) return acCount;}
      } else if (jj_2_5(2)) {
        bound = jj_consume_token(KEYWORD_STEP);
        jj_consume_token(ASSIGN);
        steps = jj_consume_token(INT);
        jj_consume_token(KEYWORD_TIMEBOUND);
        jj_consume_token(ASSIGN);
        timeBound = jj_consume_token(DOUBLE);
          StepsPredicate newStepPred = new StepsPredicate();
          int stepsValue = Integer.parseInt(steps.image);
          newStepPred.setNumberSteps(stepsValue);
          double timeBoundValue = Double.parseDouble(timeBound.image);
          newStepPred.setTimeBound(timeBoundValue);
          {if (true) return newStepPred;}
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    throw new Error("Missing return statement in function");
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_3_4() {
    if (jj_scan_token(KEYWORD_ACTION)) return true;
    if (jj_scan_token(SEMICOLON)) return true;
    return false;
  }

  private boolean jj_3_5() {
    if (jj_scan_token(KEYWORD_STEP)) return true;
    if (jj_scan_token(ASSIGN)) return true;
    return false;
  }

  private boolean jj_3_3() {
    if (jj_scan_token(KEYWORD_POPLOC)) return true;
    if (jj_scan_token(SEMICOLON)) return true;
    return false;
  }

  private boolean jj_3_1() {
    if (jj_scan_token(KEYWORD_TIME)) return true;
    if (jj_scan_token(SEMICOLON)) return true;
    return false;
  }

  private boolean jj_3_2() {
    if (jj_scan_token(KEYWORD_POPULATION)) return true;
    if (jj_scan_token(SEMICOLON)) return true;
    return false;
  }

  /** Generated Token Manager. */
  public MELAParametersTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private Token jj_scanpos, jj_lastpos;
  private int jj_la;
  private int jj_gen;
  final private int[] jj_la1 = new int[7];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x2000000,0x200000,0x2000000,0x40000,0x2000000,0x2000000,0xf8000,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x0,0x0,0x0,0x0,0x0,0x0,0x0,};
   }
  final private JJCalls[] jj_2_rtns = new JJCalls[5];
  private boolean jj_rescan = false;
  private int jj_gc = 0;

  /** Constructor with InputStream. */
  public MELAParameters(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public MELAParameters(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new MELAParametersTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 7; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 7; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public MELAParameters(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new MELAParametersTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 7; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 7; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor with generated Token Manager. */
  public MELAParameters(MELAParametersTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 7; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(MELAParametersTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 7; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      if (++jj_gc > 100) {
        jj_gc = 0;
        for (int i = 0; i < jj_2_rtns.length; i++) {
          JJCalls c = jj_2_rtns[i];
          while (c != null) {
            if (c.gen < jj_gen) c.first = null;
            c = c.next;
          }
        }
      }
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }

  static private final class LookaheadSuccess extends java.lang.Error { }
  final private LookaheadSuccess jj_ls = new LookaheadSuccess();
  private boolean jj_scan_token(int kind) {
    if (jj_scanpos == jj_lastpos) {
      jj_la--;
      if (jj_scanpos.next == null) {
        jj_lastpos = jj_scanpos = jj_scanpos.next = token_source.getNextToken();
      } else {
        jj_lastpos = jj_scanpos = jj_scanpos.next;
      }
    } else {
      jj_scanpos = jj_scanpos.next;
    }
    if (jj_rescan) {
      int i = 0; Token tok = token;
      while (tok != null && tok != jj_scanpos) { i++; tok = tok.next; }
      if (tok != null) jj_add_error_token(kind, i);
    }
    if (jj_scanpos.kind != kind) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) throw jj_ls;
    return false;
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;
  private int[] jj_lasttokens = new int[100];
  private int jj_endpos;

  private void jj_add_error_token(int kind, int pos) {
    if (pos >= 100) return;
    if (pos == jj_endpos + 1) {
      jj_lasttokens[jj_endpos++] = kind;
    } else if (jj_endpos != 0) {
      jj_expentry = new int[jj_endpos];
      for (int i = 0; i < jj_endpos; i++) {
        jj_expentry[i] = jj_lasttokens[i];
      }
      jj_entries_loop: for (java.util.Iterator<?> it = jj_expentries.iterator(); it.hasNext();) {
        int[] oldentry = (int[])(it.next());
        if (oldentry.length == jj_expentry.length) {
          for (int i = 0; i < jj_expentry.length; i++) {
            if (oldentry[i] != jj_expentry[i]) {
              continue jj_entries_loop;
            }
          }
          jj_expentries.add(jj_expentry);
          break jj_entries_loop;
        }
      }
      if (pos != 0) jj_lasttokens[(jj_endpos = pos) - 1] = kind;
    }
  }

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[39];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 7; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
          if ((jj_la1_1[i] & (1<<j)) != 0) {
            la1tokens[32+j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 39; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    jj_endpos = 0;
    jj_rescan_token();
    jj_add_error_token(0, 0);
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

  private void jj_rescan_token() {
    jj_rescan = true;
    for (int i = 0; i < 5; i++) {
    try {
      JJCalls p = jj_2_rtns[i];
      do {
        if (p.gen > jj_gen) {
          jj_la = p.arg; jj_lastpos = jj_scanpos = p.first;
          switch (i) {
            case 0: jj_3_1(); break;
            case 1: jj_3_2(); break;
            case 2: jj_3_3(); break;
            case 3: jj_3_4(); break;
            case 4: jj_3_5(); break;
          }
        }
        p = p.next;
      } while (p != null);
      } catch(LookaheadSuccess ls) { }
    }
    jj_rescan = false;
  }

  private void jj_save(int index, int xla) {
    JJCalls p = jj_2_rtns[index];
    while (p.gen > jj_gen) {
      if (p.next == null) { p = p.next = new JJCalls(); break; }
      p = p.next;
    }
    p.gen = jj_gen + xla - jj_la; p.first = token; p.arg = xla;
  }

  static final class JJCalls {
    int gen;
    Token first;
    int arg;
    JJCalls next;
  }

}
